@@ -1,4 +1,5 @@
 3.0.16
+ * Fix NullPointerException when dumping sstable with null value for timestamp column (CASSANDRA-14200)
  * Close socket on error during connect on OutboundTcpConnection (CASSANDRA-9630)
  * Set encoding for javadoc generation (CASSANDRA-14154)
  * Fix index target computation for dense composite tables with dropped compact storage (CASSANDRA-14104)
